samples/_failures_safe/1761456689_92784a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56e74c83.c: In function ‘main’:
./samples/SAFE/__tmp_56e74c83.c:154:17: error: expected declaration or statement at end of input
  154 |                 if (simulate_data_process(&sm)) {
      |                 ^~
./samples/SAFE/__tmp_56e74c83.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56e74c83.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56e74c83.c:154:17: error: expected declaration or statement at end of input
